[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://sprites/menu/gameover.png" type="Texture" id=2]
[ext_resource path="res://font/ps2p.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprites/menu/mainmenu.png" type="Texture" id=4]

[node name="GameOver" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 964.0
margin_bottom = 540.0
custom_constants/separation = 100
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 964.0
margin_bottom = 158.0
alignment = 1

[node name="GameOverLabel" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 248.0
margin_right = 716.0
margin_bottom = 52.0
texture = ExtResource( 2 )

[node name="PointsLabel" type="Label" parent="VBoxContainer"]
margin_top = 258.0
margin_right = 964.0
margin_bottom = 282.0
custom_fonts/font = ExtResource( 3 )
text = "SCORE: 00000000"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 382.0
margin_right = 964.0
margin_bottom = 434.0
focus_neighbour_top = NodePath("BackToMenuBtn")
alignment = 1

[node name="BackToMenuBtn" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 248.0
margin_right = 716.0
margin_bottom = 52.0
texture_normal = ExtResource( 4 )
stretch_mode = 2
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer2/BackToMenuBtn" to="." method="_on_BackToMenuBtn_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer2/BackToMenuBtn" to="." method="_on_BackToMenuBtn_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/BackToMenuBtn" to="." method="_on_BackToMenuBtn_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/BackToMenuBtn" to="." method="_on_BackToMenuBtn_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BackToMenuBtn" to="." method="_on_BackToMenuBtn_pressed"]
